# spendcast-benchmark

./: .env  README.md  config.json  env.example  pyproject.toml  run_chatbot.sh  test_chatbot.py  test_logging.py  test_mcp_tools.py  test_on_demand_mcp.py  test_on_demand_web.py  test_simple_mcp.py  test_websocket.py
agent/: code_assistant.md  mcp_agent_explained.md  pair_programming.md  project_plan_1.md  story_prompts.md  technical_considerations.md
src/: __init__.py  cli_interface.py  config.py  conversation.py  intelligent_agent.py  llm_client.py  main.py  mcp.py  mcp_client.py  mcp_on_demand_client.py  mcp_on_demand_manager.py  mcp_server_manager.py  mcp_subprocess_client.py  mcp_subprocess_manager.py  mcp_working_client.py  ollama_client.py  simple_cli.py  web_server.py
tests/: __init__.py  test_agent_direct.py  test_config.py  test_conversation.py  test_end_to_end.py  test_intelligent_agent.py  test_intelligent_agent_on_demand.py  test_mcp.py  test_mcp_integration.py  test_mcp_non_blocking.py  test_mcp_server_manager.py  test_mcp_servers.py  test_mcp_tools.py  test_on_demand_mcp.py  test_real_mcp_communication.py  test_simple_mcp.py  test_web_simple.py
